--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.1",
+    "fastapi>=0.128.0",
     "flet>=0.80.2",
     "psycopg2-binary>=2.9.11",
     "sqlalchemy>=2.0.45",
+    "uvicorn>=0.40.0",
 ]
