--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.128.0",
     "flet>=0.80.2",
     "psycopg2-binary>=2.9.11",
+    "pytest>=9.0.2",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.40.0",
 ]
