--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.1",
     "fastapi>=0.128.0",
-    "flet>=0.80.2",
+    "flet[all]>=0.80.2",
+    "ngrok>=1.7.0",
     "psycopg2-binary>=2.9.11",
     "pytest>=9.0.2",
     "sqlalchemy>=2.0.45",
