--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,51 @@
-# Ambiente Virtual
+# === AMBIENTE VIRTUAL ===
 .venv/
 venv/
 env/
+.uv/
 
-# Python Cache (LIXO)
+# === NODE / REACT (FRONTEND) ===
+node_modules/
+dist/
+build/
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# === PYTHON CACHE ===
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
 
-# IDEs (Configurações pessoais que não devem subir)
-.idea/
+# === CONFIGURAÇÕES DE IDE ===
 .vscode/
+.idea/
+*.swp
+*.swo
 
-# Build e Executáveis (LIXO)
-build/
-dist/
+# === SEGREDOS E VARIÁVEIS DE AMBIENTE ===
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# === BANCO DE DADOS E LOGS ===
+*.db
+*.sqlite3
+*.log
+docker-compose.override.yml
+
+# === ARQUIVOS DE BUILD E EXECUTÁVEIS ===
 *.exe
 *.spec
 *.toc
 *.pkg
 *.pyz
 
-# Variáveis de Ambiente e Segredos
-.env
-.env.local
-
-# Docker
-docker-compose.override.yml
-
-# Logs
-*.log
-
-# Prompt do Mentor (Opcional, se quiser manter privado)
+# === DOCUMENTAÇÃO INTERNA ===
 MENTOR_PROMPT.md
