--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.1",
+    "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
     "flet[all]>=0.80.2",
     "ngrok>=1.7.0",
